src/test/deca/context/invalid/pierre/objects/methodInMain.deca
class A {
    void method(){}
}
{
    A a = new A();
    method();
}
